@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-05-31T01:38:55Z",
-  "count" : 122,
+  "timestamp" : "2025-06-13T01:43:38Z",
+  "count" : 52,
   "count_minmax" : [ 25, 122 ],
-  "count_decinc" : [ -0, +122 ],
+  "count_decinc" : [ -70, +122 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
