@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-06-13T01:43:38Z",
-  "count" : 120,
-  "count_minmax" : [ 23, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "count" : 22,
+  "count_minmax" : [ 22, 22 ],
+  "count_decinc" : [ -0, +22 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
