@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-06-12T01:42:42Z",
-  "count_outdated" : 256880,
-  "uniques_outdated" : 2634,
-  "count" : 258602,
-  "uniques" : 2651,
+  "timestamp" : "2025-06-13T01:43:38Z",
+  "count_outdated" : 257001,
+  "uniques_outdated" : 2635,
+  "count" : 258721,
+  "uniques" : 2652,
   "clones" : [
     {
-      "timestamp": "2025-05-29T00:00:00Z",
-      "count": 52,
-      "count_minmax": [ 24, 121 ],
-      "count_decinc": [ 69, 121 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-05-30T00:00:00Z",
-      "count": 122,
+      "count": 52,
       "count_minmax": [ 25, 122 ],
-      "count_decinc": [ 0, 122 ],
+      "count_decinc": [ 70, 122 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-06-12T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
-      "count_decinc": [ 0, 23 ],
+      "count": 120,
+      "count_minmax": [ 23, 120 ],
+      "count_decinc": [ 0, 120 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-13T00:00:00Z",
+      "count": 22,
+      "count_minmax": [ 22, 22 ],
+      "count_decinc": [ 0, 22 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
