@@ -1,15 +1,10 @@
 {
-  "count": 1653,
+  "count": 1650,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-05-29T00:00:00Z",
-      "count": 52,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-05-30T00:00:00Z",
-      "count": 122,
+      "count": 52,
       "uniques": 2
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2025-06-12T00:00:00Z",
-      "count": 23,
+      "count": 120,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-13T00:00:00Z",
+      "count": 22,
       "uniques": 1
     }
   ]
